# Hyacinth

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AgentPanel.tsx  Avatar.tsx  Field.tsx  SettingsPanel.tsx
src/constants/: defaults.ts
src/types/: chat.ts
src/utils/: messages.ts  orchestration.ts
