[package]
name = "hyacinth"
version = "0.1.0"
description = "Hyacinth AI chat"
authors = ["Hyacinth"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "hyacinth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hyacinth"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
